k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aois
  namespace: aois
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - aois.46.225.235.51.nip.io
    secretName: aois-tls
  rules:
  - host: aois.46.225.235.51.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aois
            port:
              number: 80
